--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_calendar">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.photodiary.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_statistic"
         android:name="com.example.photodiary.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/statistic" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_camera"
         android:name="com.example.photodiary.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/search" />
+
+    <fragment
+        android:id="@+id/navigation_calendar"
+        android:name="com.example.photodiary.ui.home.HomeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/calendar" />
+
+    <fragment
+        android:id="@+id/navigation_search"
+        android:name="com.example.photodiary.ui.notifications.NotificationsFragment"
+        android:label="@string/title_notifications"
+        tools:layout="@layout/camera" />
 </navigation>
