--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,25 +7,21 @@
 
     <fragment
         android:id="@+id/navigation_statistic"
-        android:name="com.example.photodiary.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:name="com.example.photodiary.ui.StatisticFragment"
         tools:layout="@layout/statistic" />
 
     <fragment
         android:id="@+id/navigation_camera"
-        android:name="com.example.photodiary.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/search" />
+        android:name="com.example.photodiary.ui.CameraFragment"
+        tools:layout="@layout/camera" />
 
     <fragment
         android:id="@+id/navigation_calendar"
-        android:name="com.example.photodiary.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:name="com.example.photodiary.ui.CalendarFragment"
         tools:layout="@layout/calendar" />
 
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.example.photodiary.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/camera" />
+        android:name="com.example.photodiary.ui.SearchFragment"
+        tools:layout="@layout/search" />
 </navigation>
