--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:layout_width="151dp"
+        android:layout_height="61dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="256dp"
         android:text="Camera"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
