--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -5,14 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.applandeo.materialcalendarview.CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="55dp" />
+
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="151dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="256dp"
-        android:text="Calendar"
-        android:textSize="34sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/daysInARow"
+        android:layout_width="386dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="148dp"
+        android:text="DAYS"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
