--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -13,7 +13,7 @@
         tools:layout_editor_absoluteX="55dp" />
 
     <TextView
-        android:id="@+id/daysInARow"
+        android:id="@+id/date"
         android:layout_width="386dp"
         android:layout_height="32dp"
         android:layout_marginBottom="148dp"
