Editing text in photo added

--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -33,7 +33,7 @@
             app:srcCompat="@drawable/delete_foreground" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/edit"
             android:layout_width="133dp"
             android:layout_height="35dp"
             android:layout_weight="1"
