--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -5,23 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.applandeo.materialcalendarview.CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="55dp" />
-
     <TextView
         android:id="@+id/date"
         android:layout_width="386dp"
         android:layout_height="32dp"
-        android:layout_marginBottom="148dp"
         android:text="DAYS"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+    <com.applandeo.materialcalendarview.CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </com.applandeo.materialcalendarview.CalendarView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
