--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="390dp"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginBottom="4dp"
         android:orientation="horizontal"
@@ -43,14 +43,15 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="421dp"
+        android:layout_width="417dp"
         android:layout_height="411dp"
         android:layout_marginBottom="1dp"
         android:src="@mipmap/img"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057" />
 
     <TextView
         android:id="@+id/description"
